desktop pages updated

--- a/index.html
+++ b/index.html
@@ -31,14 +31,12 @@
           Hey, I’m Emma and I am a Front end developer from London. Available
           for freelance projects worldwide.
         </p>
-        <!--<img class="hero-img" src="images/rectangle.svg" alt="" />-->
-        
           <picture>
             <source media="(min-width:768px)" srcset="images/laptop2.jpg"/>
             <source srcset="images/laptop.jpg"/>
             <img src="images/laptop.jpg" alt="laptop">
           </picture>
-        <button>CONTACT ME</button>
+        <button><a href="#contact">CONTACT ME</a></button>
       </section>
       <section id="skills">
         <h2 class="item-title">Skills</h2>
