Adding JavaScript active navigation

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <nav class="nav">
         <h1 id="logo">E<span>C</span>O</h1>
         <ul class="nav-links">
-          <li><a href="#home">HOME</a></li>
-          <li><a href="#skills">SKILLS</a></li>
-          <li><a href="#portfolio">PORTFOLIO</a></li>
-          <li><a href="#contact">CONTACT ME</a></li>
+          <li><a class="home-nav" href="#home">HOME</a></li>
+          <li><a class="home-nav" href="#skills">SKILLS</a></li>
+          <li><a class="home-nav" href="#portfolio">PORTFOLIO</a></li>
+          <li><a class="home-nav" href="#contact">CONTACT ME</a></li>
         </ul>
         <div class="burger">
           <span class="line1"></span>
